[package]
name = "PyO3HelloWorld"
version = "0.1.0"
authors = ["Mangiang <mangiang@orange.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.10.1"
piston = "0.50.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.64.0"
piston2d-opengl_graphics = "0.72.0"

[lib]
name = "hello_world"
crate-type = ["cdylib"]
